# tempomem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 00-VISION.md  01-POSITIONING.md  02-ARCHITECTURE.md  03-ROADMAP.md  04-MVP-SCOPE.md  05-OPEN.md  DEV-PLAN.md
docs/design/: cosmos3-perception-adapter.md  cosmos3-spatialmem-llm-brain.md
docs/en/: 00-VISION.md  01-POSITIONING.md  02-ARCHITECTURE.md  03-ROADMAP.md  04-MVP-SCOPE.md  05-OPEN.md  DEV-PLAN.md
docs/en/sprint/: SPRINT-00.md  SPRINT-01.md  SPRINT-02.md
docs/sprint/: SPRINT-00.md  SPRINT-01.md  SPRINT-02.md
docs/zh/: 00-VISION.md  01-POSITIONING.md  02-ARCHITECTURE.md  03-ROADMAP.md  04-MVP-SCOPE.md  05-OPEN.md  DEV-PLAN.md
docs/zh/sprint/: SPRINT-00.md  SPRINT-01.md  SPRINT-02.md
examples/: 01_quickstart.py  02_query_and_answer.py  03_stream_scene.py  04_cosmos_answer.py  04_replica_demo.py  05_memory_tools.py
spec/: API.md  ENGINEERING.md  FUSION-ARBITER.md  QUERY-ROUTER.md  SCHEMA.md
src/spatialmem/: __init__.py  _errors.py  bench.py  cli.py  config.py  cosmos.py  encoders.py  fusion.py  geometry.py  perception.py  relations.py  serialize.py  store.py  tools.py  vec.py  verbalize.py  viz.py
src/spatialmem/datasets/: __init__.py
src/spatialmem/persist/: __init__.py  schema.sql
src/spatialmem/persist/migrations/: 001_init.py
src/spatialmem/query/: __init__.py
src/tempomem/: __init__.py  _errors.py  bench.py  cli.py  config.py  encoders.py  frame.py  perception.py  store.py  tools.py  trace.py  vec.py  verbalize.py  viz.py
src/tempomem/datasets/: __init__.py
src/tempomem/persist/: __init__.py  schema.sql
src/tempomem/persist/migrations/: 002_semantic.py  __init__.py
src/tempomem/query/: __init__.py
tests/: conftest.py
tests/unit/: test_audit_fixes.py  test_bench.py  test_changes.py  test_cli.py  test_clip_smoke.py  test_consolidate.py  test_cosmos_verbalizer.py  test_datasets.py  test_example02.py  test_frame.py  test_fusion.py  test_geometry.py  test_hierarchy.py  test_m2_vtrack.py  test_max_pending_obs.py  test_merge.py  test_pending_consistency.py  test_perception.py  test_query_relational.py  test_quickstart.py  test_relations.py  test_replica_adapter.py  test_semantic.py  test_serialize_budget.py  test_serialize_relations.py  test_split.py  test_store_query.py  test_tools.py  test_trace.py  test_update_history.py  test_vec.py  test_viz.py
