[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spatialmem"
version = "0.0.1"
description = "Spatial memory layer for AI agents — RGB-D / point clouds to a persistent, queryable, LLM-native 3D scene graph."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "wikieden", email = "wikieden@gmail.com" }]
keywords = ["spatial-memory", "scene-graph", "agents", "robotics", "embodied-ai", "3d"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Native vector index — wired in M1. M0 stores vectors as BLOB.
vec = ["sqlite-vec>=0.1.0"]
clip = ["open-clip-torch>=2.20"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pyright>=1.1.380"]
all = ["spatialmem[vec,clip,dev]"]

[project.scripts]
spatialmem = "spatialmem.cli:main"

[project.urls]
Homepage = "https://github.com/wikieden/spatialmem"
Repository = "https://github.com/wikieden/spatialmem"

[tool.hatch.build.targets.wheel]
packages = ["src/spatialmem"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PERF", "RUF"]

[tool.pyright]
include = ["src/spatialmem"]
pythonVersion = "3.10"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
